--- a/config.yaml
+++ b/config.yaml
@@ -8,13 +8,13 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
 # incubator: The Carpentries Incubator
-carpentry: incubator
+carpentry: cp
 
 # Overall title for pages.
-title: Lesson Title
+title: Collaborative Lesson Development with The Carpentries Workbench
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: ~
+created: 2022-07-20
 
 # Comma-separated list of keywords for the lesson
 keywords: software, data, lesson, The Carpentries
@@ -27,13 +27,13 @@ life_cycle: pre-alpha
 license: CC-BY 4.0
 
 # Link to the source repository for this lesson
-source: https://github.com/carpentries/workbench-template-md
+source: https://github.com/tobyhodges/rse22-workshop-carpentries-workbench
 
 # Default branch of your lesson
 branch: main
 
 # Who to contact if there are any issues
-contact: team@carpentries.org
+contact: tobyhodges@carpentries.org
 
 # Navigation ------------------------------------------------
 # 
